samples/_failures_safe/1761434211_9dbfba_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e57e30f.c:175: error: expected ‘;’, ‘,’ or ‘)’ at end of input
